--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=Global
 
 # Router
 # ~~~~~
@@ -33,10 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://cselcik.com:5432/bpptest"
+db.default.user=postgres
+db.default.password="kp5g6dkp5g6d"
 
 # Evolutions
 # ~~~~~
