Dependency for postgresql jdbc driver

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,7 @@ application.global=internal.Global
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+libraryDependencies += "postgresql" % "postgresql" % "9.2-1002.jdbc4"
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://cselcik.com:5432/bpptest"
 db.default.user=postgres
