Adding jsonrpc4j libs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,6 +34,7 @@ application.global=internal.Global
 # By convention, the default datasource is named `default`
 #
 libraryDependencies += "postgresql" % "postgresql" % "9.2-1002.jdbc4"
+libraryDependencies += "com.github.briandilley.jsonrpc4j" % "jsonrpc4j" % "1.1"
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://cselcik.com:5432/bpptest"
 db.default.user=postgres
